--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 		In general, the model framework is structured into two sequential stages: motion interpretation followed by frame reconstruction. The motion interpretation (MI) 
 		phase is designed to iteratively exploit the merits of our Blur-RS combination, employing three motion interpretation blocks under the guidance of a teacher module.
 		With the enhancement of temporal positional encoding, it explicitly emphasizes the contextual characterization and temporal abstraction from disentangled blur and RS streams, respectively. 
-		The frame reconstruction part is implemented through \emph{GenNet}  in an encoder-decoder architecture. We propose a novel self-prompter based on motion residues to precisely and adaptively refine the warped latent frames.
+		The frame reconstruction part is implemented through GenNet in an encoder-decoder architecture. We propose a novel self-prompter based on motion residues to precisely and adaptively refine the warped latent frames.
         </p>
 		</div>
 		<br>
