--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
    
    
    <h2 class="title is-3">Third-party Evaluation</h2>
-      <p>We also provide video demos on third-party testset using our model trained on realBR.</p>
+      <p>We also provide video demos on third-party testset directly using our model trained on realBR.</p>
    
    
        <div class="flex">
